Thread maintenence done, process monitor done.

--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-cpphoto 2011 (c) Piotr Dobrowolski
+cpphoto 2011-2012 (c) Piotr Dobrowolski
+
+Short time TODOs:
+
+Long time TODOs:
+* Console Interface,
+* Copying implementation,
+* Exif management.
